--- a/style.css
+++ b/style.css
@@ -1,3 +1,50 @@
 *{
     box-sizing: border-box;
+
+}
+.nav-container ul{
+    list-style: none;
+    display: grid; 
+}
+.nav-container{
+    display: grid;
+    grid-template-columns: 3fr 40px; 
+    grid-template-rows: 3fr;
+}
+.list{
+    font-size: 30px;
+    width: 175px;
+    display: flex;
+    flex-grow: 3;
+    justify-content: center;
+    animation-duration: .8s;
+}
+
+
+.list:hover{
+    background-color: grey;
+    transform:scale(1.002);
+    border: solid;
+    border-color: black;
+    border-radius: 5px;
+}
+.me{
+    grid-column: 1;
+    grid-row: 1;
+    
+}
+.resume{
+    grid-column: 2;
+    grid-row: 1;
+   
+}
+.examples{
+    grid-column: 3;
+    grid-row: 1;
+}
+
+.about-container{
+    background-color: black;
+    color: white;
+    text-align: center;
 }
