--- a/style.css
+++ b/style.css
@@ -110,15 +110,16 @@ a{
     padding-top: 25px;
     justify-items: center;
     
+    
 }
 .text-contain{
     grid-row: 2;
     grid-column: 2;
     padding-right: 150px;
     grid-gap: 10px;
-   
+    
     place-self: center;
-
+    margin-top: -245px;
 }
 .pfp{
     width: 150px;
@@ -127,7 +128,7 @@ a{
     grid-column: 1;
     
     place-self: center;
-    
+    margin-top: -250px;
     margin-left: 100px;
     border-radius: 15px;
 }
@@ -143,4 +144,36 @@ nav:hover{
 .pfp:hover{
     transform: scale(1.02);
     box-shadow: 2px 0 2px 0 white;
+}
+@media  (max-height: 400px) {
+    .text-contain{
+        margin-top: -70px;}
+    .pfp{
+        margin-top: -70px;
+    }
+}
+@media  (max-width: 1000px) {
+    .about-container{
+        display: grid;
+        
+    }
+    
+    .h1text{
+        grid-row: 1;
+        grid-column:span 2;
+    
+    }
+    .pfp{
+        grid-row: 2;
+        grid-column: 1;
+        width: 100px;
+        height: 100px;
+        margin-top: -400px;
+       
+    }
+    .text-contain{
+        grid-column: 2;
+        grid-row:3;
+    }
+
 }
