--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 *{
     box-sizing: border-box;
-    padding: 0;
     margin: 0;
+    padding: 0;
+    
 }
+body{min-height: 400px;}
 nav{
     border-bottom: solid;
     border-color: white;
@@ -17,8 +19,7 @@ nav{
 .nav-container li{
     text-decoration: none;
     cursor: pointer;
-    white-space: pre-wrap;
-    
+    /* white-space: pre-wrap; */
 }
 .nav-container{
     display: grid;
@@ -26,6 +27,7 @@ nav{
     grid-template-rows: 2fr;
     background: rgb(238,174,202);
     background: linear-gradient(10deg, rgba(238,174,202,1)0%, rgba(148,203,233,1) 100%);
+    overflow: hidden;
 
 }
 .list{
@@ -34,6 +36,7 @@ nav{
     border-radius: 1px;
     margin-left: 100px;
     color: white;
+    flex-flow: nowrap;
     
 }
 a{
@@ -78,7 +81,7 @@ a{
     text-align: center;
     display: grid;
     grid-template-columns: 2fr ;
-    grid-template-rows: 2fr 200px;
+    /* grid-template-rows: repeat(2fr 200px); */
     justify-content: center;
     height: 100vh;
     background: rgb(238,174,202);
@@ -121,11 +124,15 @@ a{
     place-self: center;
     margin-top: -245px;
 }
+
+.pfp-contain{
+    grid-row: 2;
+    grid-column: 1;
+}
+
 .pfp{
     width: 150px;
     height: 150px;
-    grid-row: 2;
-    grid-column: 1;
     
     place-self: center;
     margin-top: -250px;
@@ -145,35 +152,47 @@ nav:hover{
     transform: scale(1.02);
     box-shadow: 2px 0 2px 0 white;
 }
-@media  (max-height: 400px) {
-    .text-contain{
-        margin-top: -70px;}
-    .pfp{
-        margin-top: -70px;
-    }
-}
-@media  (max-width: 1000px) {
+
+
+
+/*media queries*/
+@media  screen and (max-width: 800px) {
     .about-container{
         display: grid;
+        grid-template-columns: repeat(6fr);
+        grid-template-rows: auto;
         
     }
     
     .h1text{
-        grid-row: 1;
-        grid-column:span 2;
+        grid-row: 1 / 2;
+        
+        grid-column:1 / 6;
+        
+    }
     
+    .pfp-contain {
+        grid-column: 1 / 6;
+        grid-row: 2 / 3;
+        border: solid;
+        
+        
     }
     .pfp{
-        grid-row: 2;
-        grid-column: 1;
-        width: 100px;
-        height: 100px;
-        margin-top: -400px;
-       
+        margin: 0;
+        
+    }
+    
+    .text{
+        border: solid;
+        grid-row: 4;
+        grid-column:1 / 6;
+        justify-items: center;
     }
     .text-contain{
-        grid-column: 2;
-        grid-row:3;
+        margin: 0;
+        padding: 0;
+        
     }
-
+    
 }
