--- a/style.css
+++ b/style.css
@@ -2,37 +2,38 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    
 }
+
 body{
     background: rgb(238,174,202);
     background: radial-gradient( rgba(238,174,202,1) 20%, rgba(148,203,233,1) 100%);
 }
+
 nav{
     border-bottom: solid;
     border-color: white;
+    display: flex;
 }
+
 .nav-container ul{
-    display: grid;
+    display: flex;
     box-shadow: 2px 0 2px 0 white;
     float: right;
     padding-right: 10px;
     
 }
+
 .nav-container li{
     text-decoration: none;
     cursor: pointer;
-    /* white-space: pre-wrap; */
 }
+
 .nav-container{
-    display: grid;
-    grid-template-columns: 2fr ; 
-    grid-template-rows: 2fr;
-    /* background: rgb(238,174,202);
-    background: linear-gradient(10deg, rgba(238,174,202,1)0%, rgba(148,203,233,1) 100%); */
-    overflow: hidden;
+    
+    justify-content: space-evenly;
 
 }
+
 .list{
     font-size: 20px;
     display: flex;
@@ -42,42 +43,57 @@ nav{
     flex-flow: nowrap;
     
 }
+
 a{
     text-decoration: none;
     color: white;
 }
-/* .nav-container:hover{
 
-    cursor: pointer;
-    
-} */
 .me{
     grid-column: 1;
     grid-row: 1;
 }
+
 .me:hover{
     box-shadow: 2px 2px 8px 0 white;
     border-radius: 4px;
 }
+
 .resume{
     grid-column: 2;
     grid-row: 1;
-    
 }
+
 .resume:hover{
     box-shadow: 2px 2px 8px 0 white;
     border-radius: 4px;
 }
+
 .examples{
     grid-column: 3;
     grid-row: 1;
 }
+
 .examples:hover{
     box-shadow: 2px 2px 8px 0 white;
     border-radius: 4px;
 
 }
 
+.hamburger{
+    display: none;
+    cursor: pointer;
+}
+.bar{
+    display: block;
+    width: 35px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: white;
+    border-radius: 1px;
+}
 .about-container{
 
     display: grid;
@@ -89,7 +105,8 @@ a{
     background: radial-gradient( rgba(238,174,202,1) 20%, rgba(148,203,233,1) 100%);
 }
 .h1{
-    margin-top: 10px;
+    margin-top: 60px;
+    font-size: 50px;
     
     text-align: center;
     color: white;
@@ -118,18 +135,14 @@ a{
     
     
 }
-/* .text{
-    grid-column: 2;
-    grid-row: 2;
-} */
 
 .text{
     grid-column: 2;
     grid-row: 2;
     margin: auto;
 }
+
 .text-contain{
-    
     place-self: center;
 }
 
@@ -142,20 +155,21 @@ a{
 .pfp{
     width: 200px;
     height: 200px;
-    
     place-self: center;
-    
     border-radius: 15px;
 }
+
 nav:hover{
     box-shadow: 4px 0 8px 0 white;
 }
+
 .metext:hover{
     
     transform:scale(1.02); 
     border-radius: 15px;
     box-shadow: 1px 0 4px 0 white;
 }
+
 .pfp:hover{
     transform: scale(1.02);
     box-shadow: 2px 0 2px 0 white;
@@ -165,6 +179,19 @@ nav:hover{
 
 /*media queries*/
 @media  screen and (max-width: 800px) {
+    
+    .hamburger{
+        display: block;
+    }
+    /* .hambuger.is.active .bar:nth-child(2){
+        opacity: 0;
+    }
+    .hambuger.is.active .bar:nth-child(1){
+        transform: translateY(8px) rotate(45deg);
+    }
+    .hambuger.is.active .bar:nth-child(3){
+        transform: translateY(8px) rotate(-45deg);
+    } */
     .about-container{
         display: grid;
         grid-template-columns: repeat(6fr);
@@ -185,7 +212,9 @@ nav:hover{
         grid-row: 2 / 3;  
     }
     .pfp{
-        margin: 0;   
+        margin: 0;  
+        width: 150px;
+        height: 150px;
     }
     
     .text{
