--- a/style.css
+++ b/style.css
@@ -83,12 +83,13 @@ a{
     float: right;
 }
 .hamburger{
-    display: none;
+    display: flex;
     cursor: pointer;
-    padding-top: 10px;
+    flex-direction: column;
+    margin: auto;
 }
 .bar{
-    display: block;
+    
     width: 35px;
     height: 3px;
     margin: 5px auto;
