--- a/contact/contact.css
+++ b/contact/contact.css
@@ -7,6 +7,10 @@
 body{
     background: rgb(238,174,202);
     background: radial-gradient( rgba(238,174,202,1) 20%, rgba(148,203,233,1) 100%);
+    /* background-repeat: no-repeat;
+    background-size: cover; */
+    min-height: 100vh;
+    
 }
 
 .nav-container{
@@ -98,6 +102,51 @@ a{
 }
 
 
+.container{ 
+    border: solid;
+    border-color: black;
+    display: grid;
+    grid-template-columns:auto-fit, minmax(250px, 1fr);
+    grid-template-rows: repeat(auto);
+    justify-items: center;
+    align-items: center;
+    margin: auto;
+}
+.item{
+    border: solid;
+    border-color: white;
+    justify-content: space-evenly;
+    margin: auto;
+    justify-content: center;
+}
+
+.title{
+    grid-row:1 / -1;
+    grid-column:span 2;
+    text-align: center;
+
+}
+    .name-item{
+    grid-row: 2;
+    grid-column: 1;
+}
+.email-item{
+    grid-row:3;
+    grid-column: 1;
+}
+.number-item{
+    grid-row: 2;
+    grid-column: 2;
+}
+.message-item{
+    grid-row: 3;
+    grid-column: 2;
+}
+.btn-item{
+    grid-row:4;
+    grid-column: span 2 ;
+}
+
 /*media queries*/
 @media  screen and (max-width: 800px) {
     
@@ -123,4 +172,20 @@ a{
         display: flex; 
         flex-direction: column; 
         
-    }}
+    }
+    form{
+        height: 100vh;
+    }
+    .container{ 
+        border: solid;
+        border-color: black;
+        display: grid;
+        grid-template-columns: 4fr(repeat);
+        grid-template-rows: auto;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+    }
+    
+
+}
