--- a/contact/contact.css
+++ b/contact/contact.css
@@ -124,6 +124,7 @@ a{
     grid-row:1 / -1;
     grid-column:span 2;
     text-align: center;
+    color: white;
 
 }
     .name-item{
@@ -186,6 +187,31 @@ a{
         width: 100%;
         height: 100%;
     }
+    .title{
+    grid-row:1;
+    grid-column: 1 span 2;
+    text-align: center;
+    color: white;
+    }
+    .name-item{
+        grid-row: 2 ;
+        grid-column: 1 / span 2;
+    }
+    .number-item{
+        grid-row: 3;
+        grid-column: 1 /span 2;
+    }
+    .email-item{
+        grid-row: 4;
+        grid-column: 1 /span 2;
+    }
+    .message-item{
+        grid-row: 5;
+        grid-column: 1 /span 2;
+    }
+    .btn-item{
+        grid-row:6;
+        grid-column: span 2 ;
+    }
     
-
 }
