--- a/contact/contact.css
+++ b/contact/contact.css
@@ -103,22 +103,40 @@ a{
 
 
 .container{ 
-    border: solid;
-    border-color: black;
     display: grid;
     grid-template-columns:auto-fit, minmax(250px, 1fr);
     grid-template-rows: repeat(auto);
-    justify-items: center;
-    align-items: center;
-    margin: auto;
+    min-height: 100vh;
+    
 }
 .item{
-    border: solid;
-    border-color: white;
-    justify-content: space-evenly;
-    margin: auto;
-    justify-content: center;
+    border: none;
+    margin-left:30%;
+    
+    
 }
+.input-item{
+    border-top-style: hidden;
+    border-right-style: hidden;
+    border-left-style: hidden;
+    border-bottom-style:solid;
+    background-color: transparent;
+    border-color: black;
+}
+
+input:focus, textarea:focus, select:focus{
+    outline: none;
+}
+.input-item{
+    resize: none;
+}
+#subBtn{
+    background-color: transparent;
+    border-radius: 5px;
+    margin-left: 30%;
+
+}
+
 
 .title{
     grid-row:1 / -1;
@@ -134,6 +152,8 @@ a{
 .email-item{
     grid-row:3;
     grid-column: 1;
+    display: flex;
+    flex-direction: column;
 }
 .number-item{
     grid-row: 2;
@@ -146,6 +166,18 @@ a{
 .btn-item{
     grid-row:4;
     grid-column: span 2 ;
+}
+
+#email-field{
+
+    font-size: 16px; 
+}
+#email-label{
+    font-size: 16px;
+    
+}
+#email-error{
+    color: red;
 }
 
 /*media queries*/
@@ -174,44 +206,44 @@ a{
         flex-direction: column; 
         
     }
-    form{
-        height: 100vh;
-    }
+    
     .container{ 
-        border: solid;
-        border-color: black;
         display: grid;
         grid-template-columns: 4fr(repeat);
         grid-template-rows: auto;
-        justify-content: center;
         width: 100%;
-        height: 100%;
     }
     .title{
     grid-row:1;
-    grid-column: 1 span 2;
+    grid-column: 1 ;
     text-align: center;
     color: white;
+        
     }
     .name-item{
         grid-row: 2 ;
-        grid-column: 1 / span 2;
+        grid-column: 1 ;
     }
     .number-item{
         grid-row: 3;
-        grid-column: 1 /span 2;
+        grid-column: 1;
     }
     .email-item{
         grid-row: 4;
-        grid-column: 1 /span 2;
+        grid-column: 1 ;
     }
     .message-item{
         grid-row: 5;
-        grid-column: 1 /span 2;
+        grid-column: 1 ;
     }
     .btn-item{
         grid-row:6;
-        grid-column: span 2 ;
+        grid-column: 1;
+        text-align: center;
+        
     }
-    
+    #subBtn{
+        margin-right: 75%;
+        
+    }
 }
