--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body{
     background: rgb(238,174,202);
     background: radial-gradient( rgba(238,174,202,1) 20%, rgba(148,203,233,1) 100%);
+    min-height: 100vh;
 }
 
 .nav-container{
@@ -104,7 +105,7 @@ a{
     grid-template-columns: repeat(2fr) ;
     grid-template-rows: repeat(auto);
     
-    height: 100vh;
+    min-height: 100vh;
     background: rgb(238,174,202);
     background: radial-gradient( rgba(238,174,202,1) 20%, rgba(148,203,233,1) 100%);
 }
