--- a/contact/contact.css
+++ b/contact/contact.css
@@ -108,12 +108,11 @@ a{
     grid-template-rows: repeat(auto);
     min-height: 100vh;
     
+    justify-content: center;
+    gap: 20px;
 }
 .item{
-    border: none;
-    margin-left:30%;
-    
-    
+    border: none;   
 }
 .input-item{
     border-top-style: hidden;
@@ -122,6 +121,7 @@ a{
     border-bottom-style:solid;
     background-color: transparent;
     border-color: black;
+    
 }
 
 input:focus, textarea:focus, select:focus{
@@ -129,11 +129,12 @@ input:focus, textarea:focus, select:focus{
 }
 .input-item{
     resize: none;
+    margin: 0;
 }
 #subBtn{
     background-color: transparent;
     border-radius: 5px;
-    margin-left: 30%;
+    
 
 }
 
@@ -148,6 +149,8 @@ input:focus, textarea:focus, select:focus{
     .name-item{
     grid-row: 2;
     grid-column: 1;
+    display: flex;
+    flex-direction: column;
 }
 .email-item{
     grid-row:3;
@@ -158,10 +161,14 @@ input:focus, textarea:focus, select:focus{
 .number-item{
     grid-row: 2;
     grid-column: 2;
+    display: flex;
+    flex-direction: column;
 }
 .message-item{
     grid-row: 3;
     grid-column: 2;
+    display: flex;
+    flex-direction: column;
 }
 .btn-item{
     grid-row:4;
