--- a/contact/contact.css
+++ b/contact/contact.css
@@ -5,11 +5,10 @@
 }
 
 body{
-    background: rgb(238,174,202);
     background: radial-gradient( rgba(238,174,202,1) 20%, rgba(148,203,233,1) 100%);
     /* background-repeat: no-repeat;
     background-size: cover; */
-    min-height: 100vh;
+    min-height: 100vh; 
     
 }
 
@@ -107,12 +106,16 @@ a{
     grid-template-columns:auto-fit, minmax(250px, 1fr);
     grid-template-rows: repeat(auto);
     min-height: 100vh;
-    
     justify-content: center;
     gap: 20px;
+    
+    
 }
 .item{
     border: none;   
+    display: flex;
+    justify-content: flex-start;
+    
 }
 .input-item{
     border-top-style: hidden;
@@ -129,11 +132,15 @@ input:focus, textarea:focus, select:focus{
 }
 .input-item{
     resize: none;
-    margin: 0;
+    
+    border: none;
+    border: solid;
+
 }
 #subBtn{
     background-color: transparent;
     border-radius: 5px;
+    margin: auto;
     
 
 }
@@ -164,15 +171,28 @@ input:focus, textarea:focus, select:focus{
     display: flex;
     flex-direction: column;
 }
+#number-field{
+    outline: 0;
+}
+
 .message-item{
     grid-row: 3;
     grid-column: 2;
     display: flex;
     flex-direction: column;
+    
+    height: fit-content;
+    
+}
+
+#message-counter{
+    width: 100%;
+    text-align: right;
 }
 .btn-item{
     grid-row:4;
     grid-column: span 2 ;
+    
 }
 
 #email-field{
@@ -242,6 +262,9 @@ input:focus, textarea:focus, select:focus{
     .message-item{
         grid-row: 5;
         grid-column: 1 ;
+    }
+    #message-counter{
+        font-size: 15px;
     }
     .btn-item{
         grid-row:6;
